2005-02-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/pm3d.h src/pm3d.c: New global routine is_plot_with_colorbox().
	New local variable plot_wants_colorbox. Color box is wanted for all draw
	elements using palette except those with TC_RGB.

	* src/graphics.c src/graph3d.c: No colorbox for 2D and 3D plots with
	elements using "rgbcolor".

2005-02-10  Ethan Merritt  <merritt@u.washington.edu>

	* src/misc.c (lp_parse): Accept full keyword "rgbcolor" for the line
	attribute.

2005-02-09  Harald Harders  <h.harders@tu-bs.de>

	SourceForge patch #1040192 "Merge post, epslatex, pslatex, pstex
	terminals".

	* NEWS demo/Makefile.am.in docs/Makefile.in docs/gnuplot.doc
	src/graph3d.c src/graphics.c src/makefile.all src/term.c src/term.h
	term/post.h term/post.trm: Miscellaneous changes.

	* demo/epslatex.dem demo/gnuplot.cfg: New demo and its LaTeX
	configuration file for usage with gnuplot-generated LaTeX files
	(epslatex terminal with standalone option).

	* term/pslatex.trm: Now includes code for all of the following
	terminals:
	  pslatex:  LaTeX with embedded postscript
	  pstex:    plain TeX with embedded postscript
	  epslatex: LaTeX using \includegraphics, postscript part in an external
	  	    file

	* term/epslatex.trm: Removed.

	* share/: New directory.

	* share/LaTeX/Makefile share/LaTeX/README share/LaTeX/gnuplot.cfg:
	New directory LaTeX/. New files for supporting the epslatex terminal.

2005-02-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/color.h src/save.c (save_textcolor) src/gadgets (apply_pm3dcolor)
	src/misc.c (lp_use_properties) docs/gnuplot.doc:
	New internal flag TC_LINESTYLE allows text to take its color from a
	line style. For example:    set label "foo" textcolor linestyle 2

2005-02-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_key_sample plot_boxes)
	src/term.c (term_apply_lp_properties):
	Apply linetype properties (color *AND* dot/dash/solid) before applying
	pm3d color, if any.
